--- a/package.json
+++ b/package.json
@@ -7,21 +7,29 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch --coverage --verbose --onlyChanged --passWithNoTests",
+    "test": "jest --watchAll --coverage --verbose --passWithNoTests",
     "ci:test": "jest --coverage --verbose --onlyChanged --passWithNoTests",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "canvas": "^2.9.3",
     "date-fns": "^2.28.0",
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
+    "jest-environment-jsdom": "^28.1.3",
     "material-ui": "^0.20.2",
     "next": "12.2.2",
     "react": "18.2.0",
