--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
   "extends": ["next/core-web-vitals", "plugin:react/recommended", "airbnb", "prettier"],
   "parser": "@typescript-eslint/parser",
